meja/tests/shadowing-type.stderr
File "tests/shadowing-type.meja", line 3, characters 5-6:
Error: There is already a type with name t.
