meja/tests/shadowing-type.meja
type t = A;

type t = B;
